taxas e novo botão no menu

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1813,7 +1813,7 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-rxkNn1vynk {
-  background-image: url("../../../assets/images/t-mcdonalds-cheeseburger-1920x906.png");
+  background-image: url("../../../assets/images/capa-Marisa-lanches.jpg");
 }
 .cid-rxkNp1iSdO {
   padding-top: 90px;
